Cleanup disguised struct constructor error and add it to boxed

Give a cleaner error message when an attempt is made to create a disguised
struct which also gives a hint to look at the pydoc. Add similar error to
disguised boxed/unions.

https://bugzilla.gnome.org/show_bug.cgi?id=647249